err/products.compositepage.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/CompositePage'...
Listing './lib/python3.5/site-packages/Products/CompositePage/cmf'...
Listing './lib/python3.5/site-packages/Products/CompositePage/common'...
Listing './lib/python3.5/site-packages/Products/CompositePage/manual'...
Compiling './lib/python3.5/site-packages/Products/CompositePage/slot.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePage/slot.py", line 119
    raise KeyError, name
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CompositePage/tests'...
Compiling './lib/python3.5/site-packages/Products/CompositePage/tests/test_composite.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePage/tests/test_composite.py", line 133
    except TALError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CompositePage/tool.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePage/tool.py", line 60
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CompositePage/www'...
Listing './lib/python3.5/site-packages/Products/CompositePage/zmi'...
Listing './lib/python3.5/site-packages/Products.CompositePage-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
